--- a/packages/platform/src/app/routes/login/Login.module.scss
+++ b/packages/platform/src/app/routes/login/Login.module.scss
@@ -77,7 +77,8 @@
   }
 
   @include e(link-container) {
+    @include polyfill-column-gap(12px);
+
     display: flex;
-    gap: 0 12px;
   }
 }
